--- a/public/css/linhaOnibus.css
+++ b/public/css/linhaOnibus.css
@@ -175,6 +175,33 @@ header img:active {
   color: rgb(100, 100, 100);
   background-color: white;
 }
+.lado {
+  display: flex;
+}
+.lado .menu {
+  display: none;
+}
+.dropdown-content {
+  display: block;
+  position: absolute;
+}
+.dropdown-content .perfil {
+  display: flex;
+}
+.dropdown-content .perfil img {
+  border-radius: 50px;
+  width: 0px;
+}
+form button{
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin: 10px;
+  margin-bottom: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+}
 /* COISAS DO RODAPÉ */
 footer {
   height: 180px;
@@ -279,12 +306,22 @@ main {
   align-items: center;
   height: 100dvh;
 }
-.linha-conteiner {
+.linha-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #fff;
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  height: 550px;
+  width: 350px;
+}
+.linha-container h1 {
+  font-size: 24px;
+  margin: 0px 10px 20px;
+  color: #333;
 }
 .form-group {
   margin-bottom: 15px;
@@ -301,7 +338,7 @@ input[type="text"],
 input[type="date"],
 textarea,
 select {
-  width: 100%;
+  width: 200px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -310,4 +347,138 @@ select {
 
 textarea {
   resize: none;
+}
+@media screen and (max-width: 700px) {
+  .objetivo {
+    margin: 40px;
+  }
+  .objetivo img {
+    width: 200px;
+  }
+  .principal h1 {
+    font-size: 27px;
+  }
+  .objetivo-row {
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  footer {
+    padding: 40px;
+    justify-content: space-around;
+  }
+  footer h2{
+    font-size: 18px;
+  }
+  footer ul{
+    width: 100px;
+    margin-left: 50px;
+  }
+  .logos-container img {
+    width: 25px;
+  }
+}
+/* se a tela de resolução for <= 480px */
+@media (max-width: 500px) {
+  .objetivo {
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+  .objetivo img {
+    width: 100px;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: block;
+    position: absolute;
+    color: black;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    left: -100px;
+    height: 0;
+    transition: 0.4s;
+  }
+  .dropdown-content a {
+    color: black;
+    text-decoration: none;
+    height: 0px;
+    display: flex;
+    width: 100px;
+    color: transparent;
+    transition: 0.5s all;
+    margin: 10px;
+  }
+  .dropdown-content a:hover {
+    width: 90%;
+    margin: 10px;
+    background-color: #f1f1f1;
+  }
+  .dropdown-content a img {
+    width: 0;
+    margin: 0;
+    margin-right: 10px;
+    transition: 0.5s ease-in-out;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .dropdown:hover .dropdown-content {
+    height: 100px;
+    transition: 1s;
+    display: block;
+    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
+    transition: 0.6s ease-out;
+  }
+  .dropdown:hover .dropdown-content a img {
+    width: 20px;
+  }
+  .dropdown:hover a {
+    height: 20px;
+    display: flex;
+    transition: 1s;
+    margin-bottom: 10px;
+    color: black;
+  }
+  .button {
+    display: none;
+  }
+  .lado .menu {
+    display: block;
+    filter: invert(100%);
+  }
+  /* menu ao passar o mouse */
+  .lado .menu:hover {
+    transition: 1s;
+    filter: invert(50%);
+  }
+  /* menu ao clicar com o mouse */
+  .lado .menu:active {
+    transition: 0s;
+    box-shadow: 0 0 20px 0 white;
+    background-color: white;
+    filter: invert(20%);
+  }
+  footer {
+    padding: 10px;
+    justify-content: space-evenly;
+  }
+  footer h2{
+    font-size: 12px;
+  }
+  footer ul{
+    width: 50px;
+    margin-left: 30px;
+  }
+  .logos-container img {
+    width: 20px;
+  }
 }
