--- a/public/css/admLinhaOnibus.css
+++ b/public/css/admLinhaOnibus.css
@@ -2,21 +2,9 @@
   margin: 0;
   padding: 0;
 }
-@font-face {
-  font-family: "kiwisoda";
-  src: url(KiwiSoda.ttf) format("truetype");
-}
+
 body {
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  justify-content: center;
-  align-items: center;
-  height: 100dvh;
-  background: radial-gradient(circle, rgb(22, 0, 118) 0%, black 100%);
-  background-attachment: fixed;
-  min-width: 365px;
+  height: 100dvb;
 }
 /* COISAS NO MAIN */
 main .marca {
@@ -25,7 +13,7 @@ main .marca {
   right: 10px;
   bottom: 10px;
 }
-main .marca img {
+main .marca a img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
@@ -35,88 +23,6 @@ main .marca img {
 main .marca p {
   color: white;
   align-content: center;
-}
-main .bloco {
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #1f41bb;
-  height: 550px;
-  width: 350px;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0 0 2000px 0 #1f41bb;
-}
-main .bloco h1 {
-  color: white;
-  font-family: "kiwisoda";
-}
-main .bloco .form-group input {
-  border-radius: 8px;
-  height: 25px;
-  border: none;
-  margin-left: auto;
-  margin-right: auto;
-  width: 250px;
-  margin-bottom: 5px;
-  padding-left: 5px;
-}
-main .bloco .form-group label {
-  position: relative;
-  text-align: left;
-  left: 30px;
-  top: 19px;
-  font-size: 12px;
-  color: white;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  transition: 0.5s;
-  opacity: 0;
-}
-main .bloco .form-group:hover label {
-  left: 0;
-  top: 0;
-  font-size: 14px;
-  text-align: left;
-  margin-left: 30px;
-  color: white;
-  transition: 1s;
-  opacity: 100;
-}
-main .blocoregistro {
-  background-color: #042cb8;
-  width: 300px;
-  border-radius: 20px;
-  text-align: center;
-}
-main .blocoregistro a {
-  margin: 10px;
-  color: white;
-}
-main .form-group {
-  display: flex;
-  flex-direction: column;
-}
-main .blocobotao .buttonCadastrar {
-  cursor: pointer;
-  background-color: white;
-  padding: 10px;
-  border-radius: 36px;
-  width: 100px;
-  border: none;
-  transition: 0.5s;
-}
-main .blocobotao .buttonCadastrar:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: 1s;
-}
-main .blocobotao .buttonCadastrar:active {
-  transition: 0s;
-  box-shadow: 0 0 20px 0 white;
-  color: rgb(100, 100, 100);
-  background-color: white;
 }
 /* COISAS DO CABEÇALHO */
 header {
@@ -151,21 +57,80 @@ header img:active {
 .lado .menu {
   display: none;
 }
-.lado .lista {
-  display: none;
+.dropdown-content {
+  display: block;
+  position: absolute;
+}
+.dropdown-content .perfil {
+  display: flex;
+}
+.dropdown-content .perfil img {
+  border-radius: 50px;
+  width: 0px;
 }
 /* se a tela de resolução for <= 480px */
 @media (max-width: 480px) {
-  .lado li,
-  .lado a {
+  .objetivo {
+    margin-left: 15%;
+    flex-direction: column;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: block;
+    position: absolute;
+    color: black;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    left: -100px;
+    height: 0;
+    transition: 0.4s;
+  }
+  .dropdown-content a {
+    color: black;
+    text-decoration: none;
+    height: 0px;
+    display: flex;
+    width: 100px;
+    color: transparent;
+    transition: 0.5s all;
+  }
+  .dropdown-content a img {
+    width: 0px;
+    transition: 0.5s ease-in-out;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .dropdown:hover .dropdown-content {
+    height: 100px;
+    transition: 1s;
+    display: block;
+    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
+    transition: 0.6s ease-out;
+  }
+  .dropdown:hover .dropdown-content a img {
+    width: 20px;
+  }
+  .dropdown:hover a {
+    height: 20px;
+    display: flex;
+    transition: 1s;
+    margin-bottom: 10px;
+    color: black;
+  }
+  .button {
     display: none;
   }
   .lado .menu {
     display: block;
     filter: invert(100%);
-  }
-  .lado .lista {
-    display: block;
   }
   /* menu ao passar o mouse */
   .lado .menu:hover {
@@ -181,7 +146,7 @@ header img:active {
   }
 }
 /* botões */
-.lado a {
+.lado .button {
   height: 25px;
   width: 100px;
   margin-left: 10px;
@@ -211,6 +176,12 @@ header img:active {
   color: rgb(100, 100, 100);
   background-color: white;
 }
+.lado {
+  display: flex;
+}
+.lado .menu {
+  display: none;
+}
 .dropdown-content {
   display: block;
   position: absolute;
@@ -222,23 +193,28 @@ header img:active {
   border-radius: 50px;
   width: 0px;
 }
+form button{
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin: 10px;
+  margin-bottom: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+}
 /* COISAS DO RODAPÉ */
 footer {
-  width: 100%;
-  height: 190px;
+  height: 180px;
   box-shadow: white 1px 1px 1px 1px;
   background-color: black;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: flex-start;
-}
-footer .contatos-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 70px;
+  padding-right: 70px;
 }
 footer .contatos-container li {
   color: white;
@@ -261,15 +237,13 @@ hr {
   display: flex;
   justify-content: center;
   margin: 10px;
-  height: 30px;
+  height: 50px;
 }
 .logos-container {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   filter: invert(100%);
-  padding: 20px;
 }
 .logos {
   display: flex;
@@ -299,63 +273,89 @@ hr {
   justify-content: space-between;
   height: 50px;
 }
-footer .mapa_container {
+.mapa_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  flex: 1;
-  padding: 20px;
 }
-footer .mapa_container .mapa {
-  color: white;
-  font-size: 15px;
+.mapa_container .mapa {
+  display: flex;
+  flex-direction: column;
 }
-footer .mapa_container h2 {
+.mapa_container h2 {
   color: white;
 }
-footer .mapa li {
-  color: white;
-  font-size: 15px;
-  padding-top: 10px;
-}
-footer .mapa_container .mapa a {
+.mapa_container .mapa a {
   text-decoration: none;
   color: white;
 }
-footer .mapa_container a:hover {
+.mapa li {
+  padding-top: 10px;
+}
+.mapa_container a:hover {
   color: #9340ff;
   transition: 0.1s;
 }
-footer .mapa_container a:active {
+.mapa_container a:active {
   color: #ffffff;
   transition: 0s;
 }
+main {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+}
+.containerForms{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.linha-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 550px;
+  width: 350px;
+  margin-left: 10px;
+}
+.linha-container h1 {
+  font-size: 24px;
+  margin: 0px 10px 20px;
+  color: #333;
+}
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+input[type="text"],
+input[type="date"],
+textarea,
+select {
+  width: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+textarea {
+  resize: none;
+}
 @media screen and (max-width: 700px) {
-  main .objetivo .principal {
-    padding: 30px;
-  }
-  main .objetivo img{
-    margin: 30px
-  }
-  .principal h1 {
-    font-size: 27px;
-  }
-  main .objetivo .principal p {
-    font-size: 15px;
-  }
-  main .objetivo-row {
-    margin: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  main .objetivo-row .principal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   footer {
-    height: 170px;
+    height: 180px;
     justify-content: space-around;
   }
   footer h2 {
@@ -382,24 +382,6 @@ footer .mapa_container a:active {
 }
 /* se a tela de resolução for <= 480px */
 @media (max-width: 500px) {
-  .objetivo {
-    flex-direction: column;
-    align-items: center;
-  }
-  .objetivo-row {
-    flex-direction: column;
-    align-items: center;
-  }
-  main .objetivo img {
-    flex: none;
-    width: 90%;
-  }
-  main .objetivo .principal p {
-    font-size: 15px;
-  }
-  main .objetivo-row .principal p{
-    font-size:15px;
-  }
   .dropdown {
     position: relative;
     display: inline-block;
@@ -479,7 +461,7 @@ footer .mapa_container a:active {
     filter: invert(20%);
   }
   footer {
-    height: 140px;
+    height: 160px;
     justify-content: space-evenly;
   }
   footer h2 {
@@ -502,9 +484,5 @@ footer .mapa_container a:active {
   }
   footer .logos-container img {
     width: 20px;
-  }
-  .direitosAutorais p {
-    font-size: 10px;
-    height: 20px;
   }
 }
