--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,8 @@ main .marca p {
   align-content: center;
 }
 main .objetivo .principal {
-  width: 300px;
+  flex: 1;
+  padding: 60px;
   display: block;
   margin-top: auto;
   margin-bottom: auto;
@@ -39,24 +40,12 @@ main .objetivo .principal {
 }
 main .objetivo .principal:hover {
   transition: all 2s;
-  font-size: 200%;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-main .objetivo .principal-row {
-  width: 300px;
-  display: block;
-  margin-top: auto;
-  margin-bottom: auto;
-  transition: all 1s;
-}
-main .objetivo .principal-row:hover {
-  transition: all 2s;
-  font-size: 200%;
+  font-size: 22px;
   margin-top: auto;
   margin-bottom: auto;
 }
 main .objetivo {
+  width: 100%;
   display: flex;
   justify-content: space-around;
 }
@@ -65,7 +54,10 @@ main .objetivo-row {
   justify-content: space-around;
 }
 main .objetivo img {
-  width: 300px;
+  flex: 1;
+  margin: 60px;
+  width: 400px;
+  height: 200px;
   border-radius: 10px;
   box-shadow: 0 0 1000px 0 #1f1ead;
 }
@@ -189,16 +181,21 @@ header img:active {
 }
 /* COISAS DO RODAPÉ */
 footer {
-  height: 180px;
+  width: 100%;
+  height: 190px;
   box-shadow: white 1px 1px 1px 1px;
   background-color: black;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
-  padding-top: 20px;
-  padding-left: 70px;
-  padding-right: 70px;
+}
+footer .contatos-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 footer .contatos-container li {
   color: white;
@@ -221,13 +218,15 @@ hr {
   display: flex;
   justify-content: center;
   margin: 10px;
-  height: 50px;
+  height: 30px;
 }
 .logos-container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   filter: invert(100%);
+  padding: 20px;
 }
 .logos {
   display: flex;
@@ -257,62 +256,85 @@ hr {
   justify-content: space-between;
   height: 50px;
 }
-.mapa_container {
+footer .mapa_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  flex: 1;
+  padding: 20px;
 }
-.mapa_container .mapa {
-  display: flex;
-  flex-direction: column;
+footer .mapa_container .mapa {
+  color: white;
+  font-size: 15px;
 }
-.mapa_container h2 {
+footer .mapa_container h2 {
   color: white;
 }
-.mapa_container .mapa a {
+footer .mapa li {
+  color: white;
+  font-size: 15px;
+  padding-top: 10px;
+}
+footer .mapa_container .mapa a {
   text-decoration: none;
   color: white;
 }
-.mapa li {
-  padding-top: 10px;
-}
-.mapa_container a:hover {
+footer .mapa_container a:hover {
   color: #9340ff;
   transition: 0.1s;
 }
-.mapa_container a:active {
+footer .mapa_container a:active {
   color: #ffffff;
   transition: 0s;
 }
-
 @media screen and (max-width: 700px) {
-  .objetivo {
-    margin: 40px;
+  main .objetivo .principal {
+    padding: 30px;
   }
-  .objetivo img {
-    width: 200px;
+  main .objetivo img{
+    margin: 30px
   }
   .principal h1 {
     font-size: 27px;
   }
-  .objetivo-row {
+  main .objetivo .principal p {
+    font-size: 15px;
+  }
+  main .objetivo-row {
     margin: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+  main .objetivo-row .principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   footer {
-    padding: 40px;
+    height: 170px;
     justify-content: space-around;
   }
-  footer h2{
+  footer h2 {
     font-size: 18px;
   }
-  footer ul{
+  footer ul {
     width: 100px;
-    margin-left: 50px;
+    margin-left: 0;
   }
-  .logos-container img {
+  footer .logos-container img {
     width: 25px;
+  }
+  footer .mapa_container .mapa {
+    margin-left: 0;
+  }
+  footer .contatos-container li {
+    font-size: 12px;
+    width: 70px;
+  }
+  footer .mapa_container li {
+    font-size: 12px;
+    width: 60px;
   }
 }
 /* se a tela de resolução for <= 480px */
@@ -320,10 +342,20 @@ hr {
   .objetivo {
     flex-direction: column;
     align-items: center;
-    margin: 20px;
   }
-  .objetivo img {
-    width: 100px;
+  .objetivo-row {
+    flex-direction: column;
+    align-items: center;
+  }
+  main .objetivo img {
+    flex: none;
+    width: 90%;
+  }
+  main .objetivo .principal p {
+    font-size: 15px;
+  }
+  main .objetivo-row .principal p{
+    font-size:15px;
   }
   .dropdown {
     position: relative;
@@ -404,17 +436,32 @@ hr {
     filter: invert(20%);
   }
   footer {
-    padding: 10px;
+    height: 140px;
     justify-content: space-evenly;
   }
-  footer h2{
+  footer h2 {
     font-size: 12px;
   }
-  footer ul{
-    width: 50px;
-    margin-left: 30px;
+  footer .mapa_container .mapa {
+    margin-left: 0;
   }
-  .logos-container img {
+  footer ul {
+    width: 50px;
+    margin-left: 0;
+  }
+  footer .contatos-container li {
+    font-size: 10px;
+    width: 60px;
+  }
+  footer .mapa_container li {
+    font-size: 10px;
+    width: 50px;
+  }
+  footer .logos-container img {
     width: 20px;
+  }
+  .direitosAutorais p {
+    font-size: 10px;
+    height: 20px;
   }
 }
