--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -24,13 +24,16 @@ main .marca {
   position: fixed;
   right: 10px;
   bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  align-items: center;
+  padding-left: 0;
+  padding-right: 10px;
 }
-main .marca img {
+main .marca a img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
 }
 main .marca p {
   color: white;
@@ -131,19 +134,13 @@ img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* logo ao passar o mouse */
 header img:hover {
-  transition: 1s;
   cursor: pointer;
-}
-/* logo ao clicar com o mouse */
-header img:active {
-  transition: 0s;
-  box-shadow: 0 0 20px 0 white;
-  background-color: white;
 }
 .lado {
   display: flex;
@@ -400,64 +397,39 @@ footer .mapa_container a:active {
   main .objetivo-row .principal p{
     font-size:15px;
   }
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
+   .dropdown .dropdown-content{
+    display: flex;
     position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
+    flex-direction: column;
+    width: 150px;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 0.9);
+    right: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    right: -150px;
+    transition: all 0.5s ease-in;
   }
-  .dropdown-content a {
+  .dropdown .dropdown-content a{
     color: black;
-    text-decoration: none;
-    height: 0px;
+    width: 100%;
+    height: 30px;
+    background-color: #f4f4f4;
+    font-size: 15px;
     display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    margin:0;
+    border-radius: 0;
   }
-  .dropdown-content a:hover {
-    width: 90%;
-    margin: 10px;
-    background-color: #f1f1f1;
-  }
-  .dropdown-content a img {
-    width: 0;
-    margin: 0;
-    margin-right: 10px;
-    transition: 0.5s ease-in-out;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
+  .dropdown .dropdown-content a img{
     width: 20px;
+    margin: 0px;
+    margin-right: 10px;
   }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
+  .dropdown:hover .dropdown-content{
+    right: 0;
+    transition: all 0.5s ease-out;
   }
   .button {
     display: none;
