--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,7 +6,7 @@
   font-family: "kiwisoda";
   src: url(KiwiSoda.ttf) format("truetype");
 }
-main{
+main {
   min-width: 10px;
   min-height: 10px;
 }
@@ -28,13 +28,16 @@ main .marca {
   position: fixed;
   right: 10px;
   bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  align-items: center;
+  padding-left: 0;
+  padding-right: 10px;
 }
-main .marca img {
+main .marca a img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
 }
 main .marca p {
   color: white;
@@ -144,19 +147,16 @@ img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* logo ao passar o mouse */
 header img:hover {
-  transition: 1s;
   cursor: pointer;
 }
-/* logo ao clicar com o mouse */
-header img:active {
-  transition: 0s;
-  box-shadow: 0 0 20px 0 white;
-  background-color: white;
+header .menu{
+  display: none;
 }
 .containerHeader {
   background-color: black;
@@ -174,7 +174,7 @@ header img:active {
   display: none;
 }
 /* se a tela de resolução for <= 480px */
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .lado li,
   .lado a {
     display: none;
@@ -197,6 +197,41 @@ header img:active {
     box-shadow: 0 0 20px 0 white;
     background-color: white;
     filter: invert(20%);
+  }
+  /* dropdown visivel no mobile*/
+  .dropdown .dropdown-content {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    width: 150px;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 0.9);
+    right: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    right: -150px;
+    transition: all 0.5s ease-in;
+  }
+  .dropdown .dropdown-content a {
+    color: black;
+    width: 100%;
+    height: 30px;
+    background-color: #f4f4f4;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    border-radius: 0;
+  }
+  .dropdown .dropdown-content a img {
+    width: 20px;
+    margin: 0px;
+    margin-right: 10px;
+  }
+  .dropdown:hover .dropdown-content {
+    right: 0;
+    transition: all 0.5s ease-out;
   }
 }
 /* botões */
@@ -230,16 +265,16 @@ header img:active {
   color: rgb(100, 100, 100);
   background-color: white;
 }
+/* dropdown invisivel no pc */
 .dropdown-content {
-  display: none;
   position: absolute;
 }
 .dropdown-content .perfil {
-  display: flex;
+  display: none;
 }
 .dropdown-content .perfil img {
   border-radius: 50px;
-  width: 0px;
+  width: 100%;
 }
 /* COISAS DO RODAPÉ */
 footer {
@@ -353,8 +388,8 @@ footer .mapa_container a:active {
   main .objetivo .principal {
     padding: 30px;
   }
-  main .objetivo img{
-    margin: 30px
+  main .objetivo img {
+    margin: 30px;
   }
   .principal h1 {
     font-size: 27px;
@@ -416,67 +451,8 @@ footer .mapa_container a:active {
   main .objetivo .principal p {
     font-size: 15px;
   }
-  main .objetivo-row .principal p{
-    font-size:15px;
-  }
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
-    position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
-  }
-  .dropdown-content a {
-    color: black;
-    text-decoration: none;
-    height: 0px;
-    display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-    margin: 10px;
-  }
-  .dropdown-content a:hover {
-    width: 90%;
-    margin: 10px;
-    background-color: #f1f1f1;
-  }
-  .dropdown-content a img {
-    width: 0;
-    margin: 0;
-    margin-right: 10px;
-    transition: 0.5s ease-in-out;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
-    width: 20px;
-  }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
+  main .objetivo-row .principal p {
+    font-size: 15px;
   }
   .button {
     display: none;
