--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -18,13 +18,16 @@ main .marca {
   position: fixed;
   right: 10px;
   bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  align-items: center;
+  padding-left: 0;
+  padding-right: 10px;
 }
 main .marca a img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
 }
 main .marca p {
   color: white;
@@ -43,19 +46,13 @@ img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* logo ao passar o mouse */
 header img:hover {
-  transition: 1s;
   cursor: pointer;
-}
-/* logo ao clicar com o mouse */
-header img:active {
-  transition: 0s;
-  box-shadow: 0 0 20px 0 white;
-  background-color: white;
 }
 .lado {
   display: flex;
@@ -63,70 +60,8 @@ header img:active {
 .lado .menu {
   display: none;
 }
-.dropdown-content {
-  display: block;
-  position: absolute;
-}
-.dropdown-content .perfil {
-  display: flex;
-}
-.dropdown-content .perfil img {
-  border-radius: 50px;
-  width: 0px;
-}
 /* se a tela de resolução for <= 480px */
 @media (max-width: 480px) {
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
-    position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
-  }
-  .dropdown-content a {
-    color: black;
-    text-decoration: none;
-    height: 0px;
-    display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-  }
-  .dropdown-content a img {
-    width: 0px;
-    transition: 0.5s ease-in-out;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
-    width: 20px;
-  }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
-  }
   .button {
     display: none;
   }
@@ -184,6 +119,12 @@ header img:active {
 .lado .menu {
   display: none;
 }
+.containerHeader {
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+}
 .dropdown-content {
   display: block;
   position: absolute;
@@ -195,22 +136,63 @@ header img:active {
   border-radius: 50px;
   width: 0px;
 }
+/* dropdown visivel no mobile*/
+.dropdown .dropdown-content {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  width: 150px;
+  height: 110px;
+  background-color: rgba(255, 255, 255, 0.9);
+  right: 0px;
+  align-items: center;
+  justify-content: space-evenly;
+  right: -150px;
+  transition: all 0.5s ease-in;
+}
+.dropdown .dropdown-content a {
+  color: black;
+  width: 100%;
+  height: 30px;
+  background-color: #f4f4f4;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  border-radius: 0;
+}
+.dropdown .dropdown-content a img {
+  width: 20px;
+  margin: 0px;
+  margin-right: 10px;
+}
+.dropdown:hover .dropdown-content {
+  right: 0;
+  transition: all 0.5s ease-out;
+}
 /* COISAS DO RODAPÉ */
 footer {
-  height: 170px;
+  width: 100%;
+  height: 190px;
   box-shadow: white 1px 1px 1px 1px;
   background-color: black;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: flex-start;
-  padding-top: 20px;
+}
+footer .contatos-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 footer .contatos-container li {
   color: white;
   font-size: 15px;
   padding-top: 10px;
-  margin-left: 30%;
 }
 footer .contatos-container h2 {
   color: white;
@@ -228,13 +210,15 @@ hr {
   display: flex;
   justify-content: center;
   margin: 10px;
-  height: 50px;
+  height: 30px;
 }
 .logos-container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   filter: invert(100%);
+  padding: 20px;
 }
 .logos {
   display: flex;
@@ -254,39 +238,38 @@ hr {
 /* logo ao clicar com o mouse */
 .logos-container a img:active {
   transition: 0s;
-  filter: invert(0);
   box-shadow: 0 0 10px 5px rgb(0, 0, 0);
   background-color: rgb(0, 0, 0);
+  filter: invert(0);
 }
-.containerHeader {
-  background-color: black;
-  display: flex;
-  justify-content: space-between;
-  height: 50px;
-}
-.mapa_container {
+footer .mapa_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  flex: 1;
+  padding: 20px;
 }
-.mapa_container .mapa {
-  display: flex;
-  flex-direction: column;
+footer .mapa_container .mapa {
+  color: white;
+  font-size: 15px;
 }
-.mapa_container h2 {
+footer .mapa_container h2 {
   color: white;
 }
-.mapa_container .mapa a {
+footer .mapa li {
+  color: white;
+  font-size: 15px;
+  padding-top: 10px;
+}
+footer .mapa_container .mapa a {
   text-decoration: none;
   color: white;
 }
-.mapa li {
-  padding-top: 10px;
-}
-.mapa_container a:hover {
+footer .mapa_container a:hover {
   color: #9340ff;
   transition: 0.1s;
 }
-.mapa_container a:active {
+footer .mapa_container a:active {
   color: #ffffff;
   transition: 0s;
 }
@@ -393,7 +376,7 @@ input {
     height: 250px;
   }
   footer {
-    height: 180px;
+    height: 170px;
     justify-content: space-around;
   }
   footer h2 {
@@ -420,64 +403,41 @@ input {
 }
 /* se a tela de resolução for <= 480px */
 @media (max-width: 500px) {
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
+  /* dropdown visivel no mobile*/
+  .dropdown .dropdown-content {
+    display: flex;
     position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
+    flex-direction: column;
+    width: 150px;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 0.9);
+    right: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    right: -150px;
+    transition: all 0.5s ease-in;
   }
-  .dropdown-content a {
+  .dropdown .dropdown-content a {
     color: black;
-    text-decoration: none;
-    height: 0px;
+    width: 100%;
+    height: 30px;
+    background-color: #f4f4f4;
+    font-size: 15px;
     display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-    margin: 10px;
-  }
-  .dropdown-content a:hover {
-    width: 90%;
-    margin: 10px;
-    background-color: #f1f1f1;
-  }
-  .dropdown-content a img {
-    width: 0;
+    justify-content: center;
+    align-items: center;
     margin: 0;
-    margin-right: 10px;
-    transition: 0.5s ease-in-out;
+    border-radius: 0;
+    text-decoration: none;
   }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
+  .dropdown .dropdown-content a img {
     width: 20px;
+    margin: 0px;
+    margin-right: 10px;
   }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
+  .dropdown:hover .dropdown-content {
+    right: 0;
+    transition: all 0.5s ease-out;
   }
   .button {
     display: none;
@@ -502,7 +462,7 @@ input {
     min-width: 300px;
   }
   footer {
-    height: 160px;
+    height: 140px;
     justify-content: space-evenly;
   }
   footer h2 {
@@ -525,5 +485,9 @@ input {
   }
   footer .logos-container img {
     width: 20px;
+  }
+  .direitosAutorais p {
+    font-size: 10px;
+    height: 20px;
   }
 }
