--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,45 +18,43 @@ main .marca {
   position: fixed;
   right: 10px;
   bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  align-items: center;
+  padding-left: 0;
+  padding-right: 10px;
 }
 main .marca a img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
 }
 main .marca p {
   color: white;
   align-content: center;
 }
 main .objetivo .principal {
-  flex: 1;
-  padding: 60px;
   display: block;
   margin-top: auto;
   margin-bottom: auto;
   transition: all 1s;
-}
-main .objetivo .principal:hover {
-  transition: all 2s;
-  font-size: 22px;
-  margin-top: auto;
-  margin-bottom: auto;
+  width: 400px;
+  height: 200px;
 }
 main .objetivo {
-  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
 }
 main .objetivo-row {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 main .objetivo img {
-  flex: 1;
-  margin: 60px;
-  width: 400px;
+  width: 250px;
+  max-width: 340px;
   height: 200px;
   border-radius: 10px;
   box-shadow: 0 0 1000px 0 #1f1ead;
@@ -87,8 +85,15 @@ main .objetivo .onibus:active {
   }
 }
 main .objetivo h1 {
+  transition: all 1s;
   color: #9340ff;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+main .objetivo h1:hover {
+  transition: all 2s;
+  font-size: max(35px, 2.7vw);
+  margin-top: auto;
+  margin-bottom: auto;
 }
 main .objetivo-row h1 {
   color: #9340ff;
@@ -117,19 +122,13 @@ img {
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* logo ao passar o mouse */
 header img:hover {
-  transition: 1s;
   cursor: pointer;
-}
-/* logo ao clicar com o mouse */
-header img:active {
-  transition: 0s;
-  box-shadow: 0 0 20px 0 white;
-  background-color: white;
 }
 .lado {
   display: flex;
@@ -288,21 +287,22 @@ footer .mapa_container a:active {
   transition: 0s;
 }
 @media screen and (max-width: 700px) {
-  main .objetivo .principal {
-    padding: 30px;
+  main .objetivo {
+    justify-content: space-evenly;
+    margin-top: 50px;
   }
-  main .objetivo img{
-    margin: 30px
+  main .objetivo .principal {
+    width: 200px;
+    height: 200px;
   }
   .principal h1 {
     font-size: 27px;
   }
   main .objetivo .principal p {
-    font-size: 15px;
+    font-size: 13.5px;
   }
   main .objetivo-row {
     margin: 40px;
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -310,6 +310,9 @@ footer .mapa_container a:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  main .objetivo-row .principal p {
+    font-size: 15px;
   }
   footer {
     height: 170px;
@@ -337,84 +340,75 @@ footer .mapa_container a:active {
     width: 60px;
   }
 }
-/* se a tela de resolução for <= 480px */
+/* se a tela de resolução for <= 500px */
 @media (max-width: 500px) {
-  .objetivo {
+  main .objetivo .principal {
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 200px;
+  }
+  main .objetivo {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
+  main .objetivo .principal {
+    width: 340px;
+    height: auto;
+    margin: 10px;
+  }
+  main .objetivo h1:hover {
+    font-size: max(29px, 2.7vw);
   }
   .objetivo-row {
     flex-direction: column;
     align-items: center;
   }
   main .objetivo img {
-    flex: none;
-    width: 90%;
+    width: 340px;
+    margin: 10px;
+    box-shadow: 0 0 10px 0 #1f1ead;
   }
-  main .objetivo .principal p {
-    font-size: 15px;
+  main .objetivo-row .principal p {
+    font-size: 11px;
   }
-  main .objetivo-row .principal p{
-    font-size:15px;
-  }
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
+  .dropdown .dropdown-content {
+    display: flex;
     position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
+    flex-direction: column;
+    width: 150px;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 0.9);
+    right: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    right: -150px;
+    transition: all 0.5s ease-in;
   }
-  .dropdown-content a {
+  .dropdown .dropdown-content a {
     color: black;
-    text-decoration: none;
-    height: 0px;
+    width: 100%;
+    height: 30px;
+    background-color: #f4f4f4;
+    font-size: 15px;
     display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-    margin: 10px;
-  }
-  .dropdown-content a:hover {
-    width: 90%;
-    margin: 10px;
-    background-color: #f1f1f1;
-  }
-  .dropdown-content a img {
-    width: 0;
+    justify-content: center;
+    align-items: center;
     margin: 0;
-    margin-right: 10px;
-    transition: 0.5s ease-in-out;
+    border-radius: 0;
+    text-decoration: none;
   }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
+  .dropdown .dropdown-content a img {
     width: 20px;
+    margin: 0px;
+    margin-right: 10px;
   }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
+  .dropdown:hover .dropdown-content {
+    right: 0;
+    transition: all 0.5s ease-out;
   }
   .button {
     display: none;
