--- a/public/css/admLinhaOnibus.css
+++ b/public/css/admLinhaOnibus.css
@@ -6,6 +6,20 @@
 body {
   height: 100dvb;
 }
+
+/* SCROLL */
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 30, 173, 0.75);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: #9340ff;
+}
+
 /* COISAS NO MAIN */
 main .marca {
   display: flex;
@@ -281,19 +295,23 @@ hr {
 .mapa_container h2 {
   color: white;
 }
-.mapa_container .mapa a {
-  text-decoration: none;
-  color: white;
-}
 .mapa li {
   padding-top: 10px;
 }
-.mapa_container a:hover {
-  color: #9340ff;
-  transition: 0.1s;
+footer .mapa_container .mapa li a {
+  text-decoration: none;
+  color: white;
+  transition: all 0.5s;
 }
-.mapa_container a:active {
-  color: #ffffff;
+footer .mapa_container .mapa li a:hover {
+  color: #9340ff;
+  transition: all 1s;
+}
+footer .mapa_container .mapa li a:active {
+  border-radius: 50%;
+  box-shadow: #fff 0 0 30px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   transition: 0s;
 }
 main {
