--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -18,6 +18,20 @@ body {
   background-attachment: fixed;
   min-width: 365px;
 }
+
+/* SCROLL */
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 30, 173, 0.75);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: #9340ff;
+}
+
 /* COISAS NO MAIN */
 main .marca {
   display: flex;
@@ -315,24 +329,28 @@ footer .mapa li {
   font-size: 15px;
   padding-top: 10px;
 }
-footer .mapa_container .mapa a {
+footer .mapa_container .mapa li a {
   text-decoration: none;
   color: white;
+  transition: all 0.5s;
 }
-footer .mapa_container a:hover {
+footer .mapa_container .mapa li a:hover {
   color: #9340ff;
-  transition: 0.1s;
+  transition: all 1s;
 }
-footer .mapa_container a:active {
-  color: #ffffff;
+footer .mapa_container .mapa li a:active {
+  border-radius: 50%;
+  box-shadow: #fff 0 0 30px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   transition: 0s;
 }
 @media screen and (max-width: 700px) {
   main .objetivo .principal {
     padding: 30px;
   }
-  main .objetivo img{
-    margin: 30px
+  main .objetivo img {
+    margin: 30px;
   }
   .principal h1 {
     font-size: 27px;
@@ -394,10 +412,10 @@ footer .mapa_container a:active {
   main .objetivo .principal p {
     font-size: 15px;
   }
-  main .objetivo-row .principal p{
-    font-size:15px;
+  main .objetivo-row .principal p {
+    font-size: 15px;
   }
-   .dropdown .dropdown-content{
+  .dropdown .dropdown-content {
     display: flex;
     position: absolute;
     flex-direction: column;
@@ -410,7 +428,7 @@ footer .mapa_container a:active {
     right: -150px;
     transition: all 0.5s ease-in;
   }
-  .dropdown .dropdown-content a{
+  .dropdown .dropdown-content a {
     color: black;
     width: 100%;
     height: 30px;
@@ -419,15 +437,15 @@ footer .mapa_container a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin:0;
+    margin: 0;
     border-radius: 0;
   }
-  .dropdown .dropdown-content a img{
+  .dropdown .dropdown-content a img {
     width: 20px;
     margin: 0px;
     margin-right: 10px;
   }
-  .dropdown:hover .dropdown-content{
+  .dropdown:hover .dropdown-content {
     right: 0;
     transition: all 0.5s ease-out;
   }
