--- a/public/css/esqueciSenha.css
+++ b/public/css/esqueciSenha.css
@@ -2,12 +2,40 @@
   margin: 0;
   padding: 0;
 }
-body {
-  height: 100dvb;
+@font-face {
+  font-family: "kiwisoda";
+  src: url(KiwiSoda.ttf) format("truetype");
 }
+body {
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+  background: radial-gradient(circle, rgb(22, 0, 118) 0%, black 100%);
+  background-attachment: fixed;
+  min-width: 365px;
+}
+
+/* SCROLL */
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 30, 173, 0.75);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: #9340ff;
+}
+
 /* COISAS NO MAIN */
 main {
-  background-color: #101728;
+  min-width: 10px;
+  min-height: 10px;
 }
 main .marca {
   display: flex;
@@ -40,7 +68,11 @@ main .bloco {
   width: 350px;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0 0 2000px 0 #1f41bb;
+  box-shadow: 0 0 2000px 0 #042cb8;
+}
+main .bloco h1 {
+  color: white;
+  font-family: "kiwisoda";
 }
 main .bloco input {
   border-radius: 8px;
@@ -49,47 +81,72 @@ main .bloco input {
   margin-left: auto;
   margin-right: auto;
   width: 250px;
+  margin-bottom: 5px;
+  padding-left: 5px;
 }
-main .bloco label {
+main .bloco .form-group label {
+  position: relative;
   text-align: left;
-  margin-left: 35px;
+  left: 30px;
+  top: 19px;
+  font-size: 12px;
+  color: white;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  transition: 0.5s;
+  opacity: 0;
 }
-.g-recaptcha {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.buttonEnviar {
-  margin-bottom: 10px;
-  height: 30px;
-  width: 100px;
-  margin-left: auto;
-  margin-right: auto;
+main .bloco .form-group:hover label {
+  left: 0;
+  top: 0;
+  font-size: 14px;
+  text-align: left;
+  margin-left: 30px;
+  color: white;
+  transition: 1s;
+  opacity: 100;
 }
 main .blocoregistro {
   text-align: center;
   background-color: #042cb8;
-  display: flex;
-  flex-direction: column;
   width: 300px;
   border-radius: 20px;
 }
 main .blocoregistro a {
   margin: 10px;
   color: white;
+  transition: 0.5s;
 }
-main .blocobotao .button {
-  background-color: white;
-  padding: 10px;
-  border-radius: 36px;
+main .blocoregistro a:hover {
+  transition: 1s;
+  opacity: 50%;
+}
+main .form-group {
+  display: flex;
+  flex-direction: column;
+}
+main .blocobotao a {
   color: black;
   text-decoration: none;
-  width: 100px;
-  border: black none;
 }
-main .blocobotao {
-  display: block;
+main .blocobotao .buttonEnviar {
+  cursor: pointer;
+  background-color: white;
+  padding: 5px 10px;
+  border-radius: 36px;
+  width: 120px;
+  border: none;
+  transition: 0.5s;
+}
+main .blocobotao .buttonEnviar:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: 1s;
+}
+main .blocobotao .buttonEnviar:active {
+  transition: 0s;
+  box-shadow: 0 0 20px 0 white;
+  color: rgb(100, 100, 100);
+  background-color: white;
 }
 /* COISAS DO CABEÇALHO */
 header {
@@ -112,6 +169,15 @@ img {
 header img:hover {
   cursor: pointer;
 }
+header .menu {
+  display: none;
+}
+.containerHeader {
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+}
 .lado {
   display: flex;
 }
@@ -122,7 +188,7 @@ header img:hover {
   display: none;
 }
 /* se a tela de resolução for <= 480px */
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .lado li,
   .lado a {
     display: none;
@@ -145,6 +211,41 @@ header img:hover {
     box-shadow: 0 0 20px 0 white;
     background-color: white;
     filter: invert(20%);
+  }
+  /* dropdown visivel no mobile*/
+  .dropdown .dropdown-content {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    width: 150px;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 0.9);
+    right: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    right: -150px;
+    transition: all 0.5s ease-in;
+  }
+  .dropdown .dropdown-content a {
+    color: black;
+    width: 100%;
+    height: 30px;
+    background-color: #f4f4f4;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    border-radius: 0;
+  }
+  .dropdown .dropdown-content a img {
+    width: 20px;
+    margin: 0px;
+    margin-right: 10px;
+  }
+  .dropdown:hover .dropdown-content {
+    right: 0;
+    transition: all 0.5s ease-out;
   }
 }
 /* botões */
@@ -178,22 +279,16 @@ header img:hover {
   color: rgb(100, 100, 100);
   background-color: white;
 }
-.lado {
-  display: flex;
-}
-.lado .menu {
-  display: none;
-}
+/* dropdown invisivel no pc */
 .dropdown-content {
-  display: block;
   position: absolute;
 }
 .dropdown-content .perfil {
-  display: flex;
+  display: none;
 }
 .dropdown-content .perfil img {
   border-radius: 50px;
-  width: 0px;
+  width: 100%;
 }
 /* COISAS DO RODAPÉ */
 footer {
@@ -291,16 +386,20 @@ footer .mapa li {
   font-size: 15px;
   padding-top: 10px;
 }
-footer .mapa_container .mapa a {
+footer .mapa_container .mapa li a {
   text-decoration: none;
   color: white;
+  transition: all 0.5s;
 }
-footer .mapa_container a:hover {
+footer .mapa_container .mapa li a:hover {
   color: #9340ff;
-  transition: 0.1s;
+  transition: all 1s;
 }
-footer .mapa_container a:active {
-  color: #ffffff;
+footer .mapa_container .mapa li a:active {
+  border-radius: 50%;
+  box-shadow: #fff 0 0 30px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   transition: 0s;
 }
 @media screen and (max-width: 700px) {
@@ -372,65 +471,6 @@ footer .mapa_container a:active {
   }
   main .objetivo-row .principal p {
     font-size: 15px;
-  }
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
-    display: block;
-    position: absolute;
-    color: black;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: -100px;
-    height: 0;
-    transition: 0.4s;
-  }
-  .dropdown-content a {
-    color: black;
-    text-decoration: none;
-    height: 0px;
-    display: flex;
-    width: 100px;
-    color: transparent;
-    transition: 0.5s all;
-    margin: 10px;
-  }
-  .dropdown-content a:hover {
-    width: 90%;
-    margin: 10px;
-    background-color: #f1f1f1;
-  }
-  .dropdown-content a img {
-    width: 0;
-    margin: 0;
-    margin-right: 10px;
-    transition: 0.5s ease-in-out;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    height: 100px;
-    transition: 1s;
-    display: block;
-    box-shadow: 0px 18px 16px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.6s ease-out;
-  }
-  .dropdown:hover .dropdown-content a img {
-    width: 20px;
-  }
-  .dropdown:hover a {
-    height: 20px;
-    display: flex;
-    transition: 1s;
-    margin-bottom: 10px;
-    color: black;
   }
   .button {
     display: none;
