--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -6,6 +6,20 @@ body {
   height: 100dvb;
   min-width: 365px;
 }
+
+/* SCROLL */
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 30, 173, 0.75);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: #9340ff;
+}
+
 .bgbottom {
   background-image: linear-gradient(#1f1ead, black);
 }
@@ -261,16 +275,20 @@ footer .mapa li {
   font-size: 15px;
   padding-top: 10px;
 }
-footer .mapa_container .mapa a {
+footer .mapa_container .mapa li a {
   text-decoration: none;
   color: white;
+  transition: all 0.5s;
 }
-footer .mapa_container a:hover {
+footer .mapa_container .mapa li a:hover {
   color: #9340ff;
-  transition: 0.1s;
+  transition: all 1s;
 }
-footer .mapa_container a:active {
-  color: #ffffff;
+footer .mapa_container .mapa li a:active {
+  border-radius: 50%;
+  box-shadow: #fff 0 0 30px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   transition: 0s;
 }
 .perfil {
@@ -459,10 +477,10 @@ input {
     filter: invert(20%);
   }
   .perfil {
-    min-width: 300px;
+    min-width: 340px;
   }
   footer {
-    height: 140px;
+    height: 160px;
     justify-content: space-evenly;
   }
   footer h2 {
