--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,20 @@ body {
   height: 100dvb;
   min-width: 365px;
 }
+
+/* SCROLL */
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 30, 173, 0.75);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background-color: #9340ff;
+}
+
 .bgbottom {
   background-image: linear-gradient(#1f1ead, black);
 }
@@ -274,16 +288,20 @@ footer .mapa li {
   font-size: 15px;
   padding-top: 10px;
 }
-footer .mapa_container .mapa a {
+footer .mapa_container .mapa li a {
   text-decoration: none;
   color: white;
+  transition: all 0.5s;
 }
-footer .mapa_container a:hover {
+footer .mapa_container .mapa li a:hover {
   color: #9340ff;
-  transition: 0.1s;
+  transition: all 1s;
 }
-footer .mapa_container a:active {
-  color: #ffffff;
+footer .mapa_container .mapa li a:active {
+  border-radius: 50%;
+  box-shadow: #fff 0 0 30px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #fff;
   transition: 0s;
 }
 @media screen and (max-width: 700px) {
@@ -430,7 +448,7 @@ footer .mapa_container a:active {
     filter: invert(20%);
   }
   footer {
-    height: 140px;
+    height: 150px;
     justify-content: space-evenly;
   }
   footer h2 {
@@ -450,6 +468,10 @@ footer .mapa_container a:active {
   footer .mapa_container li {
     font-size: 10px;
     width: 50px;
+  }
+  footer .logos-container {
+    padding: 10px;
+    padding-top: 20px;
   }
   footer .logos-container img {
     width: 20px;
