--- a/public/css/admLinhaOnibus.css
+++ b/public/css/admLinhaOnibus.css
@@ -27,15 +27,18 @@ main .marca {
   right: 10px;
   bottom: 10px;
   background-color: rgba(0, 0, 0, 0.2);
-  align-items: center;
   padding-left: 0;
-  padding-right: 10px;
+}
+main .marca a {
+  display: flex;
+  width: 145px;
+  text-decoration: none;
 }
 main .marca a img {
+  display: flex;
   width: 50px;
   margin-left: 10px;
   margin-right: 10px;
-  display: flex;
 }
 main .marca p {
   color: white;
