--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -141,6 +141,8 @@ header img:hover {
   display: flex;
   justify-content: space-between;
   height: 50px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 .dropdown-content {
   display: block;
