--- a/public/css/admLinhaOnibus.css
+++ b/public/css/admLinhaOnibus.css
@@ -286,6 +286,8 @@ hr {
   display: flex;
   justify-content: space-between;
   height: 50px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 .mapa_container {
   display: flex;
