--- a/public/css/login.css
+++ b/public/css/login.css
@@ -180,6 +180,8 @@ header .menu {
   display: flex;
   justify-content: space-between;
   height: 50px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 .lado {
   display: flex;
@@ -363,12 +365,6 @@ hr {
   filter: invert(0);
   box-shadow: 0 0 10px 5px rgb(0, 0, 0);
   background-color: rgb(0, 0, 0);
-}
-.containerHeader {
-  background-color: black;
-  display: flex;
-  justify-content: space-between;
-  height: 50px;
 }
 footer .mapa_container {
   display: flex;
